--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-icon": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "short-id": "0.1.0-1",
+    "shortid": "^2.2.16",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webfontloader": "^1.6.28"
   },
   "resolutions": {
     "styled-components": "^5"
